(no-ticket) Fix unusable filters in messages.
The underlying corner-icons div was expanding too much to the left
causing everything it covered to not react to user input.

--- a/oioioi/questions/static/common/messages.less
+++ b/oioioi/questions/static/common/messages.less
@@ -85,3 +85,10 @@ td.message_buttons {
 .questions_filter {
     height: 38px;
 }
+
+.expand_button {
+    float: right;
+    margin-right: 30px;
+    line-height: 13px;
+    font-weight: normal;
+}
